# ImGuiJniRoot

.github/workflows/: main.yml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/backends/: Common.h  imgui_impl_android.h
